@@ -1,5 +1,9 @@
 Changes with Apache 2.0.25-dev
 
+  *) Fixed LDAP cleanup on graceful restarts. LDAP connections are now
+     cleaned up when the connection pool pool is cleaned up.
+     [Graham Leggett]
+
   *) Fix a minor issue with Jeff Trawick's mod_include
      patch. Without this patch, the code will just allocate
      more bytes in get_combined_directive than are needed.
